crates/cli/tests/snapshots/run_node_test__sync_depends_on__format_version-caret.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 439
expression: "read_to_string(fixture.path().join(\"depends-on/package.json\")).unwrap()"
---
{
  "name": "test-cases-depends-on",
  "dependencies": {
    "react": "17.0.0",
    "test-cases-deps-a": "^1.2.3",
    "test-cases-deps-b": "^4.5.6"
  }
}

