crates/cli/tests/snapshots/run_node_test__sync_depends_on__syncs_as_dependency_to_package_json.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 469
expression: "read_to_string(fixture.path().join(\"depends-on/package.json\")).unwrap()"
---
{
  "name": "test-cases-depends-on",
  "dependencies": {
    "react": "17.0.0",
    "test-cases-deps-a": "*",
    "test-cases-deps-b": "*"
  }
}

