crates/cli/tests/snapshots/run_node_test__sync_depends_on__syncs_as_reference_to_tsconfig_json-2.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 467
expression: "read_to_string(fixture.path().join(\"depends-on/tsconfig.json\")).unwrap()"
---
{
  "exclude": [
    "*.js"
  ],
  "references": [
    {
      "path": "../deps-b"
    },
    {
      "path": "../deps-c"
    }
  ]
}

