crates/cli/tests/snapshots/run_node_test__sync_depends_on__syncs_as_reference_to_tsconfig_json.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 487
expression: "read_to_string(fixture.path().join(\"tsconfig.json\")).unwrap()"
---
{
  "references": [
    {
      "path": "base"
    },
    {
      "path": "depends-on"
    },
    {
      "path": "deps-b"
    },
    {
      "path": "deps-c"
    }
  ]
}

